fix max-width and text align on mobile

--- a/src/blocks/footer/__column-information/footer__column-information.css
+++ b/src/blocks/footer/__column-information/footer__column-information.css
@@ -4,7 +4,7 @@
 	margin: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 920px) {
 	.footer__column-information {
 		display: flex;
 		flex-direction: column;
@@ -18,5 +18,6 @@
 	.footer__column-information {
 		align-items: flex-start;
 		max-width: 290px;
+		text-align: start;
 	}
 }
