--- a/src/blocks/footer/__column-support/footer__column-support.css
+++ b/src/blocks/footer/__column-support/footer__column-support.css
@@ -6,7 +6,7 @@
 	margin: 0;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 920px) {
 	.footer__column-support {
 		margin: 0 auto;
 	}
